<resources>
    <string name="app_name">ArchSandbox</string>

    <string name="hello">Hello</string>
    <string name="splash_title">Arch Sandbox</string>
    <string name="splash_subtitle">Bem vindo ao blueprint da arquitetura sandbox</string>
    <string name="todo_list">ToDo List</string>
    <string name="title_activity_menu">App Sandbox</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Menu</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="m_todo_list">Todo List</string>
    <string name="m_augmented_reality">Augmented Reality</string>
    <string name="m_barcode_reader">Barcode reader</string>
    <string name="m_ocr_reader">OCR reader</string>
    <string name="m_menu">Menu</string>

</resources>
